--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Pong</title>
         <link rel="stylesheet" href="pong.css">
-        <script src="./videojuego/pong.js"></script>
+        <script src="./Videojuego/pong.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
